code smell addressed