@@ -1,7 +1,6 @@
 package com.greg.golf.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.modelmapper.ModelMapper;
 import lombok.RequiredArgsConstructor;
 
@@ -12,6 +11,6 @@ public abstract class BaseController {
 
 	protected <S, T> List<T> mapList(List<S> source, Class<T> targetClass) {
 
-		return source.stream().map(element -> modelMapper.map(element, targetClass)).collect(Collectors.toList());
+		return source.stream().map(element -> modelMapper.map(element, targetClass)).toList();
 	}
 }
